<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vao</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">VAO u_u</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="picture_event">picture_event</string>
    <string name="btnLogin">Login</string>
    <string name="imageEvent">image_event</string>
    <string name="eventTitle">This is the first event :D!</string>
    <string name="eventDescription">&quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elementum mi nec malesuada ultricies. Quisque quis odio eu felis rhoncus ultricies. Mauris turpis quam, rhoncus vitae risus a, imperdiet suscipit lorem. Nam vitae est sem. Duis erat erat, interdum in eleifend sed, feugiat eu sapien. &quot;</string>
    <string name="swtEventAttendance">Confirmar asistencia</string>
    <string name="imglogo">imgLogo</string>
    <string name="placeHolderUsuario">Usuario</string>
    <string name="placeHolderPassword">Password</string>
    <string name="eventListMessage">Mostar lista de eventos</string>

    <!-- Facebook stuff -->
    <string name="btnLoginFB">Login with Facebook</string>
    <string name="app_id">266719326820720</string> <!-- id according to fb standard -->
    <string name="title_activity_login_facebook">LoginFacebook</string>
    <string name="successFBLogin">bien fb del mal!</string>
    <!-- /Facebook stuff -->

    <string name="appName">VAO COFRADIA</string>
    <string name="eventPlace">This is the place</string>
    <string name="facebookevent">FacebookEvent</string>
    <string name="eventComment">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="eventTime">This is the time!</string>
    <string name="favoriteEvent">FavoriteEvent</string>
    <string name="commentUserImage">commentuserimage</string>
    <string name="categoryEvent">algo</string>
    <string name="chkEventFacebookAttendance">Confirmar en Facebook</string>
    <string name="btnConfirmAttendance">Confirmar</string>
    <string name="txtEventAttendanceText">Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet</string>
    <string name="btnCancelAttendance">Cancelar</string>
    <string name="eventMoodLabel">Mood</string>
    <string name="eventEventDescripcionLabel">Descripcion</string>
    <string name="eventCommentLabel">Mira lo que estan hablando :O</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="title_activity_event_creation">EventCreation</string>
    <string name="title_activity_event_list">Mostrar lista de eventos</string>
    <string name="txtAddEvent">Crear evento</string>
	<string name="txtNewEvent">Nuevo evento</string>
    <string-array name="event_categories_keys">
        <item>Concierto</item>
        <item>Teatro</item>
        <item>Tono </item>
    </string-array>
	<string-array name="event_privacies_keys">
	    <item>No compartir</item>
        <item>Público</item>
        <item>Secreto</item>
        <item>Amigos</item>
    </string-array>
    <string-array name="event_privacies_values">
        <item>NOT_SHARING</item>
        <item>OPEN</item>
        <item>SECRET</item>
        <item>FRIENDS</item>
    </string-array>
	<string name="title_activity_event_creation_details">EventCreationDetails</string>
    <string name="searchTitle">Lista de Eventos</string>
    <string name="txtExampleEvent">Mi primer evento</string>
    <string name="txtHelloUser">Hola boli: </string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="validation_fields_complete">Por favor, complete todos los campos</string>
    <string name="validation_correct_dates">Por favor, ingrese fechas válidas para el evento</string>
    <string name="event_create_save">Guardar</string>
</resources>
