<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnEventConfirmAttendace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkEventFacebookAttendance"
        android:layout_below="@+id/chkEventFacebookAttendance"
        android:layout_marginTop="20dp"
        android:text="@string/btnConfirmAttendance" />

    <Button
        android:id="@+id/btnEventCancelAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnEventConfirmAttendace"
        android:layout_alignBottom="@+id/btnEventConfirmAttendace"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/btnEventConfirmAttendace"
        android:text="@string/btnCancelAttendance" />

    <TextView
        android:id="@+id/txtEventAttendanceConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtEventAttendanceText" />

    <CheckBox
        android:id="@+id/chkEventFacebookAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtEventAttendanceConfirmText"
        android:layout_marginLeft="37dp"
        android:text="@string/chkEventFacebookAttendance" />

</RelativeLayout>
