<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:facebook="http://schemas.android.com/apk/res-auto" 
			    xmlns:tools="http://schemas.android.com/tools"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
			    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/placeHolderUsuario"
        android:ems="10" android:inputType="text">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsuario"
        android:layout_below="@+id/txtUsuario"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/placeHolderPassword"
        android:inputType="textPassword" />
    

    <Button
    	android:id="@+id/btnLoginFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:text="@string/btnLoginFB" /> 

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/imglogo"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignRight="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="20dp"
        android:onClick="doRegularLogin"
        android:text="@string/btnLogin" />

</RelativeLayout>